# organization_directory

./: DOCKER_DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  database.py  main.py  security.py
src/api/: dependencies.py
src/api/v1/: activities.py  buildings.py  fixtures.py  organizations.py
src/dto/: __init__.py  activity.py  building.py  organization.py
src/model/: __init__.py  activity.py  building.py  organization.py
src/repository/: __init__.py  activity_repository.py  base.py  building_repository.py  organization_repository.py
src/service/: __init__.py  activity_service.py  building_service.py  fixture_service.py  organization_service.py
tests/: conftest.py  test_activities_api.py  test_activity_service.py
