[project]
name = "organization-directory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.119.1",
    "geopy>=2.4.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "ruff>=0.14.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]


[tool.ruff]
# Версия Python
target-version = "py311"

# Исключаемые файлы/директории
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".env",
]

# Включенные правила (можно использовать E, W, F, I и др.)
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Включенные правила
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]

# Исключенные правила
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.pyupgrade]
# Настройки pyupgrade
keep-runtime-typing = true

[tool.ruff.format]
# Настройки форматирования
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
